# OneLife

./: .gitignore  INSTALL_SAMSUNG.txt  LICENSE  README.md
lifehub/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUTOSTART.txt  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  manage_startup.bat  pyproject.toml  requirements.txt  start.bat  start_silent.vbs  wsgi.py
lifehub/.github/workflows/: ci.yml
lifehub/app/: __init__.py  config.py  errors.py  extensions.py  models.py  utils.py
lifehub/app/routes/: __init__.py  assets.py  calendar.py  contacts.py  dashboard.py  documents.py  finance.py  folders.py  goals.py  health_check.py  io.py  journal.py  learning.py  search.py  settings.py  tasks.py
lifehub/app/routes/health/: __init__.py  crud.py  heart_rate.py  import_samsung.py  ingest.py  sleep.py  stats.py
lifehub/app/schemas/: __init__.py  validation.py
lifehub/app/services/: __init__.py  asset_valuation.py  assets.py  health_ingest.py  health_merge.py  networth.py  samsung_health.py  settings.py  tasks.py
lifehub/docs/: INGEST_TOKEN.md
lifehub/migrations/: alembic.ini
lifehub/migrations/versions/: 0aec141706dc_add_asset_id_folder_id_streak_last_.py  1638d9403e33_add_distance_km_and_step_calorie_to_.py  54422a558e94_initial_schema.py  a8f3c1d2e4b7_add_user_settings_table.py  e7067fb7267e_add_heart_rate_and_sleep_session_tables.py
lifehub/static/: manifest.webmanifest  sw.js
lifehub/static/css/: style.css
lifehub/static/js/: app.js
lifehub/templates/: index.html
lifehub/tests/: conftest.py  test_app.py  test_asset_valuations.py  test_finance.py  test_health_stats.py  test_samsung_health.py  test_security_headers.py  test_settings.py  test_tasks.py
samsung-sync/: README.md  settings.gradle.kts
samsung-sync/app/: build.gradle.kts  proguard-rules.pro
samsung-sync/app/src/main/: AndroidManifest.xml
samsung-sync/app/src/main/java/com/onelife/sync/: Config.kt  HealthSync.kt  MainActivity.kt  SyncWorker.kt
samsung-sync/app/src/main/res/drawable/: ic_launcher_foreground.xml
samsung-sync/app/src/main/res/layout/: activity_main.xml
samsung-sync/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
samsung-sync/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
