[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onelife"
version = "0.1.0"
description = "OneLife — personal life management dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.7",
    "Werkzeug==3.0.4",
    "python-dotenv==1.0.1",
    "gunicorn==22.0.0",
    "flask-cors==4.0.1",
    "flask-limiter==3.8.0",
    "marshmallow==3.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.5.7",
    "black==24.4.2",
    "mypy==1.11.1",
    "types-requests==2.31.0.20240417",
    "pre-commit==3.8.0",
]
postgres = ["psycopg2-binary==2.9.9"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "venv", "instance", "uploads", "__pycache__", ".mypy_cache", ".ruff_cache", "dist", "build", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "T20",
    "SIM",
    "N",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "T201",
    "S101",
    "ARG001",
    "ARG002",
    "PLR2004",
    "TRY003",
    "PLR0911",
    "PLR0912",
    "PLR0915",
]
per-file-ignores = { "tests/*" = ["S101", "ARG001", "ARG002", "T201", "E741", "B007", "PLR0913", "F841", "PTH118", "PTH120", "PTH123", "B017", "E402", "SIM117"], "migrations/*" = ["E501", "I001", "C901", "ERA001"] }

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = '''
/(
  \.venv
  | venv
  | instance
  | uploads
  | __pycache__
  | \.mypy_cache
  | \.ruff_cache
  | dist
  | build
  | migrations
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.eggs
  | \.pytest_cache
  | \.coverage
  | htmlcov
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
pretty = true
files = ["app", "tests", "manage.py", "wsgi.py"]
disable_error_code = ["no-untyped-def"]
exclude = [
    "migrations",
    "instance",
    "uploads",
    ".venv",
    "venv",
]

[[tool.mypy.overrides]]
module = "flask*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "marshmallow*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=60",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/instance/*",
    "*/uploads/*",
    "manage.py",
    "wsgi.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.pre-commit-hooks]